# ai_school_proj

./: .gitignore  README.md
_android/: README.md  build.gradle  gradle.properties  proguard-rules.pro
_android/app/: build.gradle
_android/app/src/main/: AndroidManifest.xml
_android/app/src/main/java/com/example/myandroidapp/: MainActivity.java
_android/app/src/main/res/drawable/: custom_button_background.xml
_android/app/src/main/res/layout/: activity_main.xml
_android/app/src/main/res/values/: colors.xml  styles.xml
_cmake/: CMakeLists.txt  README  README.md  main.cpp  manage.py  manage.sh  toolchain.cmake
_cmake/lib/install/lib/: libwx_baseu_net-3.2.so.0.2.1  libwx_baseu_xml-3.2.so.0.2.1  libwx_gtk3u_adv-3.2.so.0  libwx_gtk3u_adv-3.2.so.0.2.1  libwx_gtk3u_aui-3.2.so.0  libwx_gtk3u_aui-3.2.so.0.2.1  libwx_gtk3u_core-3.2.so.0  libwx_gtk3u_gl-3.2.so.0  libwx_gtk3u_gl-3.2.so.0.2.1  libwx_gtk3u_html-3.2.so.0  libwx_gtk3u_media-3.2.so.0  libwx_gtk3u_media-3.2.so.0.2.1  libwx_gtk3u_propgrid-3.2.so.0  libwx_gtk3u_qa-3.2.so.0  libwx_gtk3u_qa-3.2.so.0.2.1  libwx_gtk3u_ribbon-3.2.so.0  libwx_gtk3u_ribbon-3.2.so.0.2.1  libwx_gtk3u_richtext-3.2.so.0  libwx_gtk3u_stc-3.2.so.0  libwx_gtk3u_xrc-3.2.so.0
_cmake/lib/install/lib/cmake/wxWidgets/: wxWidgetsConfig.cmake  wxWidgetsTargets-debug.cmake  wxWidgetsTargets.cmake
_cmake/lib/install/lib/wx/config/: gtk3-unicode-3.2
_cmake/lib/install/lib/wx/include/gtk3-unicode-3.2/wx/: setup.h
_cmake/src/: CMakeLists.txt
_cmake/src/bridge/: laba_net.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
_cmake/src/client/: client.cpp
_cmake/src/client/presentation/: ContentPanel.cpp  ContentPanel.h  Dashboard.cpp  Dashboard.h  MainFrame.cpp  MainFrame.h  NavigationPanel.cpp  NavigationPanel.h  Observer.h  State.cpp  State.h  Subject.h
_cmake/src/server/: server.cpp
_flutter/app_name/: pubspec.yaml
